# community-plugins

./: .gitignore  .pre-commit-config.yaml  README.md  categories.json  mkdocs.yml  plugins.json  pyproject.toml  removed.json  zensical.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  removal.yml
.github/workflows/: checks.yaml  deploy-docs.yaml  generate-rh-data.yml  linting.yaml  plugin-checks.yaml  tests.yaml  upload-files.yaml  upload-plugins.yaml  upload-removed.yaml
docs/: database.md  index.md
docs/assets/: latest_plugins.js  manifest.json
docs/assets/css/: faq.css  homepage.css  plugin-cards.css  plugin_card.css  pwa.css  styles.css
docs/assets/js/: dataLoader.js  homepage.js  latest_plugins.js  plugins.js
docs/docs/add/: include.md  index.md  remove.md
docs/docs/help/: index.md
docs/docs/plugin/: include.md  index.md  tutorial.md
docs/docs/rhfest/: index.md
docs/faq/: categories.md  development.md  general.md  index.md  licensing.md  publishing.md  troubleshooting.md
docs/help/: index.md
docs/overrides/: main.html
docs/overrides/partials/integrations/: analytics.html
metadata/: __init__.py  const.py  main.py  plugin_metadata_generator.py  summary_generator.py
metadata/generator/: __init__.py  asset_handler.py  log_buffer.py  validators.py
scripts/: __init__.py  check_categories.py  check_preflight.py  check_releases.py  check_removed.py  generate_metadata.py  release_selection.py  sort_json.py
scripts/check/: removed.py
tests/: __init__.py  conftest.py  test_asset_handler.py  test_check_categories.py  test_check_preflight.py  test_check_releases.py  test_exceptions.py  test_generate_metadata.py
tests/__snapshots__/: test_generate_metadata.ambr
tests/fixtures/: manifest_data.json  releases_data.json  wrong_domain_manifest.json  wrong_version_manifest.json
tools/jsonschema/: categories.schema.json
